--- a/resources/assets/stylesheets/less/responsive.less
+++ b/resources/assets/stylesheets/less/responsive.less
@@ -162,7 +162,7 @@ label[for="responsive-toggle"] {
 .media-breakpoint-small-down({
     #header, #flex-header, #barTopFont, #barTopMenu,
     #barBottomLeft .current_page, #barBottommiddle, #barBottomLeft, #barBottomArrow,
-    #tabs, #tabs2, .sidebar-image, #sidebar-navigation, #barTopFont, #footer {
+    #tabs, #tabs2, .sidebar-image, #sidebar-navigation:not(.show), #barTopFont, #footer, .sidebar-widget-header {
         display: none !important;
     }
     .responsive-hidden {
