fixes #8845, fix traversal in css and js to find label-encapsulated i18n-elements

--- a/resources/assets/stylesheets/less/i18n.less
+++ b/resources/assets/stylesheets/less/i18n.less
@@ -31,7 +31,7 @@ div.i18n_group {
         }
     }
 
-    > div.i18n {
+    div.i18n {
         input[type=text], > textarea, .editor_toolbar .buttons, .cktoolbar .cke_inner {
             padding-left: (@max-width + 6px) !important;
         }
