--- a/resources/assets/stylesheets/less/globalsearch.less
+++ b/resources/assets/stylesheets/less/globalsearch.less
@@ -77,6 +77,7 @@
         background-color: @white;
         box-shadow: 1px 1px 1px @light-gray-color-80;
         color: @text-color;
+        display: none;
         font-size: 18px;
         font-weight: normal;
         max-height: 90vh;
@@ -108,12 +109,9 @@
                 margin-right: 10px;
             }
         }
-
-        opacity: 0;
-        transition: opacity @transition-duration;
     }
     &.is-visible #globalsearch-list {
-        opacity: 1;
+        display: block;
     }
 
     // "Searching..." info
