--- a/resources/assets/stylesheets/less/forms.less
+++ b/resources/assets/stylesheets/less/forms.less
@@ -122,13 +122,11 @@ form.default {
     }
 
     fieldset {
-        @gap: 10px;
-
         box-sizing: border-box;
 
         border: solid 1px @content-color-40;
-        margin: 0 0 @gap;
-        padding: @gap;
+        margin: 0 0 10px;
+        padding: 10px;
         padding-top: 0px;
         position: relative;
 
@@ -143,9 +141,9 @@ form.default {
             font-size: 12pt;
             font-weight: bold;
             line-height: 2em;
-            margin: 0 -11px @gap;
+            margin: 0 -11px;
             padding: 0;
-            text-indent: @gap;
+            text-indent: 10px;
             width: calc(100% + 23px);
         }
     }
