--- a/resources/assets/stylesheets/less/selects.less
+++ b/resources/assets/stylesheets/less/selects.less
@@ -155,7 +155,7 @@ select {
     }
 
     .select2-results > .select2-results__options {
-        max-height: 400px;
+        max-height: 40vh;
     }
 
     &.select2-container--open {
