--- a/resources/assets/stylesheets/less/tooltip.less
+++ b/resources/assets/stylesheets/less/tooltip.less
@@ -15,7 +15,7 @@
     position: absolute;
     text-align: left;
     text-shadow: 0 1px 0 fade(#fff, 50%);
-    white-space: pre-line;
+    white-space: normal;
     z-index: 10000;
 
     word-wrap: break-word;
