--- a/resources/assets/stylesheets/widgets.less
+++ b/resources/assets/stylesheets/widgets.less
@@ -331,7 +331,7 @@
         box-sizing: border-box;
         transition: all 300ms linear;
         max-height: 1000px;
-        overflow: hidden;
+//        overflow: hidden;
     }
 
     &.second-display {
