action menu: fix unclickable space between items and add border, fixes #8883, fixes #8884

--- a/resources/assets/stylesheets/less/actionmenu.less
+++ b/resources/assets/stylesheets/less/actionmenu.less
@@ -27,6 +27,7 @@
         z-index: 2;
 
         background: white;
+        border: thin solid @dark-gray-color-45;
         box-shadow: @shadow;
         text-align: left;
         white-space: nowrap;
@@ -44,9 +45,10 @@
     }
 
     .action-menu-item {
-        padding: 3px 0;
+        padding: 0;
         a {
-            padding-left: 0;
+            margin: 0;
+            padding: 3px 0;
             display: block;
 
             &[disabled] {
