--- a/resources/assets/stylesheets/less/tabs.less
+++ b/resources/assets/stylesheets/less/tabs.less
@@ -26,7 +26,7 @@ div.clear
 
 // Main tab set with the tabs sitting on top of the main content
 #tabs {
-    padding: 0 2px 0 0;
+    padding: 0 2px 0 7px;
 
     border-top: 1px solid @dark-gray-color-40;
     border-bottom: 1px solid @dark-gray-color-40;
@@ -36,8 +36,6 @@ div.clear
 
     li {
         background-color: @dark-gray-color-10;
-        padding: 0px 5px 2px 5px;
-        margin: 3px 0px 4px 10px;
 
         &:last-child {
             border-right: none;
@@ -68,7 +66,7 @@ div.clear
         float: left;
         display: block;
 
-        padding-right: 0em;
+        padding: 3px 8px 6px;
         white-space: nowrap;
         height: 23px;
     }
