fix unclickable space between main navigation items and adjust border beneath tab items, re #8885

--- a/resources/assets/stylesheets/less/navigation.less
+++ b/resources/assets/stylesheets/less/navigation.less
@@ -5,6 +5,7 @@ body:not(.fixed) #barTopMenu {
     margin: 0 0 4px 5px;
     padding: 0;
     z-index: 1000;
+    font-size: 0;
 
     > li {
         display: inline-block;
@@ -13,6 +14,7 @@ body:not(.fixed) #barTopMenu {
         height: 55px;
         padding: 0;
         z-index: 2;
+        font-size: @font-size-base;
     }
     a {
         color: @base-color;
