consultations: work in progress, re #8120

--- a/resources/assets/stylesheets/less/actionmenu.less
+++ b/resources/assets/stylesheets/less/actionmenu.less
@@ -29,6 +29,7 @@
         background: white;
         border: thin solid @dark-gray-color-45;
         box-shadow: @shadow;
+        font-weight: normal;
         text-align: left;
         white-space: nowrap;
     }
