--- a/resources/assets/stylesheets/less/lists.less
+++ b/resources/assets/stylesheets/less/lists.less
@@ -1,16 +1,15 @@
-
 // Lists
 // -------------------------
 
 // Unordered and Ordered lists
 ul,
 ol {
-  margin-top: 0;
-  margin-bottom: 0;
-  ul,
-  ol {
+    margin-top: 0;
     margin-bottom: 0;
-  }
+    ul,
+    ol {
+        margin-bottom: 0;
+    }
 }
 
 
@@ -18,50 +17,67 @@ ol {
 
 // Unstyled keeps list items block level, just removes default browser padding and list-style
 .list-unstyled {
-  padding-left: 0;
-  list-style: none;
+    padding-left: 0;
+    list-style: none;
 }
 
 // Inline turns list items into inline-block
 .list-inline {
-  .list-unstyled();
-  margin-left: -5px;
+    .list-unstyled();
+    margin-left: -5px;
 
-  > li {
-    display: inline-block;
-    padding-left: 5px;
-    padding-right: 5px;
-  }
+    > li {
+        display: inline-block;
+        padding-left: 5px;
+        padding-right: 5px;
+    }
 }
 
 //comma separated
 .list-csv {
-  .list-inline();
-  margin-left: 0;
-  > li {
-    padding-left: 0;
-    &:after {
-      content:","
-    };
-    &:last-child:after {
-      content:""
-    };
-  }
+    .list-inline();
+    margin-left: 0;
+
+    > li {
+        padding-left: 0;
+
+        &::after {
+            content: ",";
+        }
+        &:last-child::after {
+            content: "";
+        }
+    }
 }
 
 dl {
-  dt {
-      font-weight: bold;
-  }
+    dt {
+        font-weight: bold;
+    }
 }
 
 // reset the visualization of different levels of unordered lists
 .formatted-content ul {
-  list-style-type: disc;
-  ul {
-    list-style-type: circle;
+    list-style-type: disc;
+
     ul {
-      list-style-type: square;
+        list-style-type: circle;
+
+        ul {
+            list-style-type: square;
+        }
     }
-  }
+}
+
+ul.default {
+    list-style: inside;
+    margin: 0;
+    padding: 0;
+
+    li:only-child {
+        list-style: none;
+    }
+    li:not(:last-child) {
+        margin-bottom: 0.25em;
+    }
 }
