disable some widgets styles that conflict with default styles on non-widget pages, fixes #9017

--- a/resources/assets/stylesheets/widgets.less
+++ b/resources/assets/stylesheets/widgets.less
@@ -14,9 +14,11 @@
 
 @content-padding: 0.5em;
 
+/* disabled for now
 #layout_content {
     overflow-x: hidden;
 }
+*/
 
 .grid-stack > .grid-stack-item > .grid-stack-item-content {
     overflow: hidden;
@@ -318,6 +320,7 @@
 });
 
 // Sidebar related
+/* disabled for now
 #layout-sidebar {
     display: flex;
     align-items: flex-start;
@@ -357,6 +360,7 @@
         }
     }
 }
+*/
 
 .addable-widgets {
     padding: 0;
