--- a/resources/assets/stylesheets/studip.less
+++ b/resources/assets/stylesheets/studip.less
@@ -64,6 +64,7 @@
 @import "less/start.less";
 @import "less/profile.less";
 @import "less/my_courses.less";
+@import "less/consultation.less";
 
 @import "less/mobile.less";
 @import "less/pagination.less";
