changes in the wake of code review, re #8931

--- a/resources/assets/stylesheets/less/tables.less
+++ b/resources/assets/stylesheets/less/tables.less
@@ -487,7 +487,7 @@ table.default {
         float: right;
         text-align: right;
         white-space: nowrap;
-        img, svg {
+        img, svg, input[type="image"] {
             vertical-align: middle;
         }
     }
