fix scrollbar height with ckeditor in dialogs, re #9010

--- a/public/assets/stylesheets/ckeditor-skin/mainui.css
+++ b/public/assets/stylesheets/ckeditor-skin/mainui.css
@@ -173,7 +173,7 @@ Special outer level classes used in this file:
    that element. */
 .cke_wysiwyg_div {
 	display: block;
-	height: 100%;
+	height: calc(100% - 16px);
 	overflow: auto;
 	padding: 0 0;
 	outline-style: none;
