open action menu reversed if space below is not sufficient, fixes #8925

--- a/resources/assets/stylesheets/less/actionmenu.less
+++ b/resources/assets/stylesheets/less/actionmenu.less
@@ -33,6 +33,17 @@
         white-space: nowrap;
     }
 
+    &.reversed {
+        .action-menu-content {
+            top: auto;
+            bottom: -4px;
+
+            .action-menu-list .action-menu-item:last-of-type {
+                padding-right: 20px;
+            }
+        }
+    }
+
     .action-menu-title {
         font-weight: bold;
         margin: 0.2em 0 0.3em;
