reset setting on .action-menu-icon so that all icons will have the same size, fixes #8793

--- a/resources/assets/stylesheets/less/actionmenu.less
+++ b/resources/assets/stylesheets/less/actionmenu.less
@@ -8,12 +8,12 @@
     vertical-align: middle;
 
     .action-menu-icon {
-        .square(@icon-size);
         z-index: 3;
 
         position: relative;
         cursor: pointer;
         display: inline-block;
+        padding: 0;
         width: 20px;
         height: 20px;
     }
