fix problems when using actionmenu in article.studip's header, fixes #9075

--- a/resources/assets/stylesheets/less/article.less
+++ b/resources/assets/stylesheets/less/article.less
@@ -47,11 +47,10 @@ article.studip {
             }
         }
 
-        nav {
+        > nav {
             display: flex;
             align-items: center;
             padding: 2px;
-            overflow: hidden;
 
             > * {
                 border-right: 1px solid @content-color;
