add locked icon in front of not viewable wiki page links, exclude not visible pages from list views, search and export and migrate list view into a template, re #7804

--- a/resources/assets/stylesheets/less/wiki.less
+++ b/resources/assets/stylesheets/less/wiki.less
@@ -43,3 +43,12 @@ body#wiki #main_content td.printcontent:last-child:not(:first-child) {
 .no-js #wiki button[name="submit-and-edit"] {
     display: none;
 }
+
+a.wiki-restricted {
+    @icon-size: 12px;
+    .background-icon('lock-locked', 'info', @icon-size);
+    background-position: left center;
+    background-repeat: no-repeat;
+
+    padding-left: @icon-size;
+}
