fixes #7992, adapted patch suggestions from dofeldsc

--- a/resources/assets/stylesheets/less/quicksearch.less
+++ b/resources/assets/stylesheets/less/quicksearch.less
@@ -14,7 +14,7 @@ input.quicksearchbox {
     padding-left: 6px;
 }
 
-.quicksearch_frame {
+div.quicksearch_frame {
     input[type="text"] {
         box-sizing: border-box;
         border-width: 1px 30px 1px 1px;
@@ -22,7 +22,6 @@ input.quicksearchbox {
         border-color: #7E92B0;
         border-image: none;
         float: left;
-        width: 250px;
     }
 
     input[type=submit] {
@@ -32,9 +31,9 @@ input.quicksearchbox {
         background-color: transparent;
         border: 0;
         width: 29px;
-        height: 20px;
+        height: 24px;
         .background-icon('search', 'info_alt');
-        background-position: center 4px;
+        background-position: center 8px;
         background-repeat: no-repeat;
         vertical-align: top;
         margin-left: -30px;
