buttons in dialog should not be bold, fixes #9099

--- a/resources/assets/stylesheets/less/dialog.less
+++ b/resources/assets/stylesheets/less/dialog.less
@@ -69,7 +69,7 @@
         }
         .ui-button {
             .button(); // Include button mixin
-            font-weight: bold;
+            font-weight: normal;
 
             &.accept,
             &.cancel {
