--- a/resources/assets/stylesheets/studip.less
+++ b/resources/assets/stylesheets/studip.less
@@ -56,6 +56,7 @@
 @import "less/schedule.less";
 @import "less/study-area-selection.less";
 @import "less/tour.less";
+@import "less/ilias-interface.less";
 @import "less/studygroup.less";
 @import "less/wiki.less";
 @import "less/raumzeit.less";
