Fix visual bug regarding the display of many lecturers, re #7911

--- a/resources/assets/stylesheets/less/search.less
+++ b/resources/assets/stylesheets/less/search.less
@@ -146,6 +146,9 @@
                         position: absolute;
                         right: 0;
                         bottom: 0;
+                        width: 42em;
+                        overflow: hidden;
+                        text-align: right;
                     }
                 }
 
