use text-overflow ellipsis, re #9164

--- a/resources/assets/stylesheets/less/globalsearch.less
+++ b/resources/assets/stylesheets/less/globalsearch.less
@@ -218,6 +218,8 @@
                     .globalsearch-result-title {
                         font-size: @font-size-base;
                         font-weight: bold;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
                     }
 
                     .globalsearch-result-details {
