Visual adjustments for the reset button (X instead of circle), fixes #9158

--- a/resources/assets/stylesheets/less/search.less
+++ b/resources/assets/stylesheets/less/search.less
@@ -173,4 +173,12 @@ a.no-result {
 div#div-search-input {
     margin-top: 0;
     margin-bottom: 16px;
+
+    // visual adjustments for the reset button
+    button#reset-search {
+        background-color: transparent;
+        border: 0;
+        padding-left: 10px;
+    }
+
 }
