Categories with no results in the sidebar (light grey) are not clickable anymore, fixes #9187

--- a/resources/assets/stylesheets/less/search.less
+++ b/resources/assets/stylesheets/less/search.less
@@ -169,6 +169,8 @@
 
 a.no-result {
     color: grey;
+    pointer-events: none;
+    cursor: default;
 }
 div#div-search-input {
     margin-top: 0;
