Dynamically hide search categories when RESOURCES_ENABLE is deactivated or MVV::isVisible() is false, re #9165

--- a/resources/assets/stylesheets/less/search.less
+++ b/resources/assets/stylesheets/less/search.less
@@ -5,6 +5,10 @@
     width: 100%;
 }
 
+label.inactive-settings-category {
+        color:red;
+}
+
 #search {
     // "Searching..." info
     #searching-gif {
