fix link icon color in helpbar, fixes #7114

--- a/resources/assets/stylesheets/less/helpbar.less
+++ b/resources/assets/stylesheets/less/helpbar.less
@@ -14,7 +14,7 @@
     #helpbar-sticky {
         display: none;
     }
-    
+
     h2, h3 {
         border-bottom: 0;
         color: #fff;
@@ -109,6 +109,13 @@
                 .background-icon('accept', 'info_alt');
             }
         }
+    }
+
+    a.link-extern {
+        .icon('before', 'link-extern', 'info_alt');
+    }
+    a.link-intern {
+        .icon('before', 'link-intern', 'info_alt');
     }
 }
 
