exclude context avatars from recoloring, fixes #9127

--- a/resources/assets/stylesheets/studip.less
+++ b/resources/assets/stylesheets/studip.less
@@ -636,7 +636,9 @@ a.new-member {
     brightness(100% - hsvvalue(@base-color)+hsvvalue(#28497c));
 }
 
-#barTopMenu li a img, #barTopMenu li a canvas, div#layout-sidebar div.sidebar-image img {
+#barTopMenu li a img,
+#barTopMenu li a canvas,
+#layout-sidebar .sidebar-image > img {
     .recolor;
 }
 
