introduce article.studip.padding-less and adjust padding, re #9183

--- a/resources/assets/stylesheets/less/article.less
+++ b/resources/assets/stylesheets/less/article.less
@@ -120,6 +120,18 @@ article.studip {
             border: 0 !important;
         }
     }
+
+    &.padding-less {
+        padding: 0;
+
+        header {
+            margin: 0;
+        }
+
+        > footer {
+            margin: 0;
+        }
+    }
 }
 
 article.new {
