--- a/resources/assets/stylesheets/less/search.less
+++ b/resources/assets/stylesheets/less/search.less
@@ -79,7 +79,7 @@ label.inactive-settings-category {
                 flex-direction: row;
                 flex-wrap: nowrap;
 
-                padding: 6px 6px 6px 0;
+                padding: 8px;
                 transition: background-color @transition-duration;
 
                 &:not(:first-child) {
@@ -104,9 +104,8 @@ label.inactive-settings-category {
 
                 .search-result-img {
                     flex: 0;
-                    margin: auto;
-                    margin-left: 6px;
-                    margin-right: 6px;
+                    margin: auto 0;
+                    margin-right: 8px;
 
                     img {
                         .square(36px);
@@ -136,7 +135,7 @@ label.inactive-settings-category {
                     overflow: hidden;
                     margin-right: 6px;
                     flex-direction: column;
-                  
+
 
                     .search-result-time {
                         color: @dark-gray-color-80;
