--- a/resources/assets/stylesheets/less/search.less
+++ b/resources/assets/stylesheets/less/search.less
@@ -104,7 +104,7 @@ label.inactive-settings-category {
 
                 .search-result-img {
                     flex: 0;
-                    margin: auto 0;
+                    margin: 0;
                     margin-right: 8px;
 
                     img {
