adjust sidebar to fixated footer, re #8764

--- a/public/plugins_packages/core/Blubber/assets/stylesheets/blubber.less
+++ b/public/plugins_packages/core/Blubber/assets/stylesheets/blubber.less
@@ -500,8 +500,14 @@ table.select {
     }
 }
 
+#layout_sidebar {
+    margin-bottom: 2em;
+    z-index: 1;
+}
+
 // Fix footer
 #layout_footer {
     position: fixed;
     bottom: 0;
+    z-index: 2;
 }
