refs #7010, disable editing of forum area, if area has an connected issue

--- a/public/plugins_packages/core/Forum/stylesheets/forum.less
+++ b/public/plugins_packages/core/Forum/stylesheets/forum.less
@@ -291,6 +291,10 @@ html.no-js #forum {
         right: 10px;
         top: 0px;
         visibility: hidden;
+
+        .tooltip-important::before, .tooltip-icon::before {
+            margin-top: -4px;
+        }
     }
 
     tr:hover .action-icons {
