add space around buttons in tfoot when in responsive display mode, fixes #9377

--- a/resources/assets/stylesheets/less/responsive.less
+++ b/resources/assets/stylesheets/less/responsive.less
@@ -391,4 +391,9 @@ label[for="responsive-toggle"] {
             }
         }
     }
+
+    table.default tfoot .button {
+        margin-top: 0.5em;
+        margin-bottom: 0.5em;
+    }
 }
